--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en" ng-app="myApp" xmlns="http://www.w3.org/1999/html">
-  <! -- Test -->
+  <! -- Test TEST 123 -->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
